# darknet

./: .gitignore  CMakeLists.txt  msu_label.py  object_detector.py  package.xml  train.all.txt  val.txt  voc_label.py
cfg/: voc.data
examples/: classifier.c  detector.c
scripts/: msu_label.py
src/: compare.c  data.c  parser.c
