<?xml version="1.0"?>
<package format="2">
  <name>darknet-msu-robosub</name>
  <version>0.1.0</version>
  <description>The darknet-msu-robosub package</description>

  <maintainer email="kirby.overman@gmail.com">Kirby Overman</maintainer>

  <license></license>
  <url type="website">https://pjreddie.com/darknet/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensors_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
